updated My Company page breadcrumbs. Conducted a little cleanup on CompanyProjects Files modified - [CompanyUsers,CompanyProjects,CompanyForms,CompanyMunicipalities,CompanyProfile,MyCompany]

--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -22,8 +22,8 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn25">
-                        <wm-liveform novalidate="false" errormessage="" title="Company Details" iconclass="wi wi-work" defaultmode="Edit" dataset="bind:Variables.UpdateVendorData.dataSet" captionalign="left" captionposition="top" name="liveform1" formdata="bind:Variables.CurrentVendorObj.firstRecord"
-                        class="panel-primary" on-beforeservicecall="liveform1Beforeservicecall($event, $operation, $data)">
+                        <wm-liveform novalidate="false" errormessage="" title="Company Details" iconclass="wi wi-contact-phone" defaultmode="Edit" dataset="bind:Variables.UpdateVendorData.dataSet" captionalign="left" captionposition="top" name="liveform1"
+                        formdata="bind:Variables.CurrentVendorObj.firstRecord" class="panel-primary" on-beforeservicecall="liveform1Beforeservicecall($event, $operation, $data)">
                             <wm-layoutgrid columns="3" name="layoutgrid1">
                                 <wm-gridrow name="gridrow1">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn1">
