- Fixed adding members to groups - Refresh on InspectionList will update the source of the grid in the selected tab now. Files modified - [InspectionList,UserOpenForms,UserClosedForms,MunicipalityUsers,pom.xml]

--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -225,7 +225,7 @@
                                     <wm-gridrow name="gridrow50">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn83">
                                             <wm-livegrid formlayout="dialog" name="Municipalitygroups">
-                                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.GetMunicipalityGroups.dataSet" navigation="Classic" name="Municipalitygroupsgrid" filtermode="multicolumn" exportformat="EXCEL"
+                                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.GetMunicipalityGroups.dataSet" navigation="Classic" name="gridMunicipalitygroups" filtermode="multicolumn" exportformat="EXCEL"
                                                 showrecordcount="true">
                                                     <wm-grid-column binding="groupName" caption="Group Name" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="groupDescription" caption="Group Description" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
