--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -1,13 +1,12 @@
 <wm-partial data-ng-controller="topnavPageController" name="topnav" type="topnav">
-    <wm-navbar name="navbar1" id="topnavbar" sticky="topnavbar" style="z-index: 20">
+    <wm-navbar name="navbar1" id="topnavbar" sticky="topnavbar" push-down-element="div.app-page-content" style="z-index: 20">
         <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
             <wm-nav-item name="list_cart">
                 <wm-anchor caption="My Cart" name="cartLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()" margin="unset 2em unset unset" badgevalue="bind:Variables.stvCartCount.dataSet.dataValue||'0'" class="cartBadge"></wm-anchor>
             </wm-nav-item>
             <wm-nav-item name="list_messages">
-                <wm-anchor caption="Messages" name="messagesLink" iconclass="wi wi-mail-outline" on-click="Variables.goToPage_MyMessages.invoke()" margin="unset 2em unset unset" badgevalue="bind:Variables.svCountUnReadMessagesByUser.dataSet[$i].unReadMessagesCount"
-                class="cartBadge"></wm-anchor>
+                <wm-anchor caption="Messages" name="messagesLink" iconclass="wi wi-mail-outline" on-click="Variables.goToPage_MyMessages.invoke()" margin="unset 2em unset unset" badgevalue="bind:Variables.svCountUnReadMessagesByUser.dataSet[$i].unReadMessagesCount" class="cartBadge"></wm-anchor>
             </wm-nav-item>
             <wm-nav-item name="list_profile">
                 <wm-gridcolumn columnwidth="3" name="gridcolumn1">
