--- a/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
+++ b/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
@@ -21,10 +21,10 @@
                             <wm-layoutgrid height="100%" name="layoutgrid7">
                                 <wm-gridrow height="100%" name="gridrow11_1">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-refresh"></wm-icon>
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-skip-previous"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Previous" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Previous Inspections" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.svCountYesterdayInspections.dataSet[$i].inspectionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
@@ -38,8 +38,8 @@
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn25" class="col-xs-3">
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-today"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn26" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Today" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn26" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Today's Inspections" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.svCountTodayInspections.dataSet[$i].inspectionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
@@ -51,10 +51,10 @@
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow8_1">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn20_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-view-day"></wm-icon>
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-skip-next"></wm-icon>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn21_1" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Upcoming" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn21_1" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Upcoming Inspections" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label name="tileStatLabel" caption="bind:Variables.svCountTomorrowInspections.dataSet[$i].inspectionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
