updated iconsets and breadcrumbs for CXAdmin pages Files modified - [ManageProjects,ManageRoles,ManageUsers,ManageMunicipalities,leftnav,ManageSubscriptions,ManageCompanies,CXCodeSets,CXCodeList,CXGlobalSettings]

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -28,16 +28,16 @@
             <wm-anchor name="anchor5" iconclass="wi wi-public" caption="CX Admin" on-click="Variables.goToPage_CXAdmin.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item7">
-            <wm-anchor name="anchor7" iconclass="wi wi-file" caption="DevDataEntry" on-click="Variables.goToPage_DataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
+            <wm-anchor name="anchor7" iconclass="wi wi-long-arrow-right" caption="DevDataEntry" on-click="Variables.goToPage_DataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item9">
-            <wm-anchor name="anchor9" iconclass="wi wi-file" caption="Forms DevDataEntry" on-click="Variables.goToPage_DevFormDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
+            <wm-anchor name="anchor9" iconclass="wi wi-long-arrow-right" caption="Forms DevDataEntry" on-click="Variables.goToPage_DevFormDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item9_1">
-            <wm-anchor name="anchor9_1" iconclass="wi wi-file" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
+            <wm-anchor name="anchor9_1" iconclass="wi wi-long-arrow-right" caption="Projects DevDataEntry" on-click="Variables.goToPage_ProjectsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item12">
-            <wm-anchor name="anchor12" iconclass="wi wi-file" caption="Inspections DevDataEntry" on-click="Variables.goToPage_InspectionsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
+            <wm-anchor name="anchor12" iconclass="wi wi-long-arrow-right" caption="Inspections DevDataEntry" on-click="Variables.goToPage_InspectionsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
     </wm-nav>
 </wm-partial>
