--- a/src/main/webapp/pages/CXCodeSets/CXCodeSets.html
+++ b/src/main/webapp/pages/CXCodeSets/CXCodeSets.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn7" padding="2em unset">
-                        <wm-label padding="unset 0.5em" name="labelHeader" caption="Global Code Sets" fontweight="bold" class="h4"></wm-label>
+                        <wm-label name="labelHeader" caption="Global Code Sets" fontweight="bold" class="h4"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
