updated sort order of ScheduleInspection columns and CodeEnfDash tiles Files modified - [CodeEnforcementDashboard,ScheduleInspections]

--- a/src/main/webapp/pages/ScheduleInspections/ScheduleInspections.html
+++ b/src/main/webapp/pages/ScheduleInspections/ScheduleInspections.html
@@ -34,9 +34,9 @@
                                                 <wm-grid-column binding="inspectionTitle" caption="Inspection Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="inspectDesignName" caption="Inspection" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="inspectionZone" caption="Inspection Zone" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="fullAddress" caption="Address" show="true" readonly="undefined"></wm-grid-column>
-                                                <wm-grid-column binding="subdivision" caption="Subdivision" show="true" readonly="undefined"></wm-grid-column>
-                                                <wm-grid-column binding="lot" caption="Lot" show="true" readonly="undefined"></wm-grid-column>
+                                                <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="fullAddress" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="requestedFor" caption="Requested For" type="string" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             </wm-grid>
                                             <wm-button class="btn-primary" caption="bind:'Assign' + (!!Widgets.gridInspectors.selecteditem.id ? (' to ' + Widgets.gridInspectors.selecteditem.fullName) : '')" type="button" margin="unset 0.5em" name="buttonAssignInspector"
@@ -61,9 +61,9 @@
                                                 <wm-grid-column binding="inspectionTitle" caption="Inspection Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="inspectDesignName" caption="Inspection" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="inspectionZone" caption="Inspection Zone" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="fullAddress" caption="Address" show="true" readonly="undefined"></wm-grid-column>
-                                                <wm-grid-column binding="subdivision" caption="Subdivision" show="true" readonly="undefined"></wm-grid-column>
-                                                <wm-grid-column binding="lot" caption="Lot" show="true" readonly="undefined"></wm-grid-column>
+                                                <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="fullAddress" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="assignedTo" caption="Assigned To" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="dateAssigned" caption="Date Assigned" type="string" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             </wm-grid>
