--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -1,5 +1,5 @@
 <wm-partial data-ng-controller="topnavPageController" name="topnav" type="topnav">
-    <wm-navbar name="navbar1" id="topnavbar" sticky="topnavbar" push-down-element="div.app-page-content" style="z-index: 20">
+    <wm-navbar name="navbar1" id="topnavbar" sticky="topnavbar" push-down-element="main.app-content, footer.app-footer" style="z-index: 20">
         <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
             <wm-nav-item name="list_cart">
